[package]
name = "database"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
tracing.workspace = true
uuid = { workspace = true }
chrono = { workspace = true }
thiserror.workspace = true
anyhow.workspace = true
models = { path = "../models" }
async-trait.workspace = true

[[bin]]
name = "db-migrate"
path = "src/bin/migrate.rs"
